# spark-light-v5

./: Cargo.toml
i2c-test/: Cargo.toml  espflash.toml  partitions.csv
i2c-test/src/: main.rs
light/: Cargo.toml
light/.cargo/: config.toml
remote/: Cargo.toml
remote-v2/: Cargo.toml
remote-v2/src/: main.rs
remote/.cargo/: config.toml
remote/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs
spark-messages/src/: lib.rs
spark_messages/: Cargo.toml
spark_messages/src/: lib.rs
