[package]
edition = "2021"
name    = "spark_light_v5"
version = "0.1.0"

[[bin]]
name = "spark_light_v5"
path = "./src/bin/main.rs"

[dependencies]
critical-section = "1.2.0"
embedded-io = "0.6.1"
esp-alloc = { version = "0.6.0" }
esp-backtrace = { version = "0.15.0", features = [
  "esp32s3",
  "exception-handler",
  "panic-handler",
  "println",
] }
esp-hal = { version = "0.23.1", features = ["esp32s3", "unstable"] }
esp-println = { version = "0.13.0", features = ["esp32s3", "log"] }
esp-wifi = { version = "0.12.0", default-features = false, features = [
  "esp-alloc",
  "esp32s3",
  "log",
  "utils",
  "wifi",
] }
heapless = { version = "0.8.0", default-features = false }
log = { version = "0.4.21" }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }

esp-hal-smartled = { git = "https://github.com/hydrogenoxide/esp-hal-community.git", branch = "esp-hal-0.23" }
smart-leds = "0.4.0"
shared = { version = "0.1.0", path = "../shared" }

