[package]
edition      = "2021"
name         = "light"
rust-version = "1.86"
version      = "0.1.0"

[[bin]]
name = "light"
path = "./src/bin/main.rs"

[dependencies]
esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32s3"] }
esp-hal                = { version = "=1.0.0-rc.0", features = ["esp32s3", "unstable"] }

critical-section = "1.2.0"
embassy-executor = { version = "0.7.0", features = ["task-arena-size-20480"] }
embassy-time     = "0.4.0"
esp-alloc        = "0.8.0"
esp-hal-embassy  = { version = "0.9.0", features = ["esp32s3"] }
static_cell      = "2.1.1"
esp-hal-smartled = { git = "https://github.com/davidmweber/esp-hal-community.git", rev = "20badf1b03727153074fd647b5a3c2a26310ad3e" }
smart-leds = "0.4.0"


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
