[package]
name = "remote-v2"
version = "0.1.0"
authors = ["Chris Laplante <chris.laplante@agilent.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "remote-v2"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.51", features = ["embassy-time-driver", "embassy-sync"] }
#async-button = { git = "https://github.com/chris-laplante/async-button.git", branch = "cpl/test-std", features = ["std"] }
anyhow = "1.0.98"
embedded-hal = "1.0.0"
futures-util = "0.3.31"
async-button = "0.2.0"
embassy-executor = { version = "0.7", features = ["arch-std", "executor-thread", "log"] }
static_cell = "2.1.0"
embassy-futures = "0.1.1"




[build-dependencies]
embuild = "0.33"
