[package]
name = "remote-v2"
version = "0.1.0"
authors = ["Chris Laplante <chris.laplante@agilent.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "remote-v2"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
anyhow = "1.0.98"
embedded-hal = "1.0.0"
esp-idf-svc = { version = "0.51", features = ["embassy-time-driver", "embassy-sync"] }
log = "0.4"
maplit = "1.0.2"

[build-dependencies]
embuild = "0.33"
