[package]
edition = "2021"
name    = "remote"
version = "0.1.0"

[[bin]]
name = "remote"
path = "./src/bin/main.rs"

[dependencies]
critical-section = "1.2.0"
esp-alloc = { version = "0.6.0" }
esp-backtrace = { version = "0.15.0", features = [
  "esp32",
  "exception-handler",
  "panic-handler",
  "println",
] }
esp-hal = { version = "0.23.1", features = ["esp32", "unstable"] }
esp-println = { version = "0.13.0", features = ["esp32", "log"] }
log = { version = "0.4.21" }
